--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "local": "ts-node --files src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node src/server.ts"
+    "dev": "ts-node --files src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +20,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "lodash": "^4.17.21",
     "mongodb": "^6.12.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.6",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
