--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-validator": "^7.2.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
@@ -29,6 +31,8 @@
     "@types/express": "^5.0.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.6",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "typescript": "^5.7.3",
